frontend deployed on expo

--- a/app.json
+++ b/app.json
@@ -25,6 +25,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "51276322-0b74-4b57-893c-ffc527bd4606"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/51276322-0b74-4b57-893c-ffc527bd4606"
     }
   }
 }
