--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~50.0.5",
     "expo-location": "~16.5.2",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.9",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-maps": "1.10.0",
