--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@expo-google-fonts/biorhyme": "^0.2.3",
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo/ngrok": "^4.1.0",
+    "@material-ui/core": "^4.12.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
-    
     "@react-navigation/bottom-tabs": "6",
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
@@ -32,6 +32,7 @@
     "react-native": "0.73.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.10.0",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-redux": "^9.1.0",
