--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/react-native": "^5.0.5",
     "@expo-google-fonts/biorhyme": "^0.2.3",
     "@expo-google-fonts/lato": "^0.2.3",
+    "@expo/metro-runtime": "~3.1.3",
     "@expo/ngrok": "^4.1.0",
     "@material-ui/core": "^4.12.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
