--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.10.0",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-dates": "^0.21.9",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
