--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.10.0",
     "react-native-paper": "^5.12.3",
