--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd-mobile-icons": "^0.3.0",
     "dotenv": "^16.4.1",
     "expo": "~50.0.5",
+    "expo-camera": "~14.0.5",
     "expo-font": "~11.10.2",
     "expo-linear-gradient": "^12.7.1",
     "expo-location": "~16.5.2",
