--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/ngrok": "^4.1.0",
     "@material-ui/core": "^4.12.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/bottom-tabs": "6",
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
@@ -27,16 +28,17 @@
     "dotenv": "^16.4.1",
     "expo": "~50.0.5",
     "expo-camera": "~14.0.5",
+    "expo-datepicker": "^1.0.23",
     "expo-font": "~11.10.2",
     "expo-linear-gradient": "^12.7.1",
     "expo-location": "~16.5.2",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.10",
     "jwt-decode": "^4.0.0",
-    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-autocomplete-dropdown": "^3.1.4",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -45,6 +47,7 @@
     "react-native-paper-dates": "^0.21.9",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.0.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0"
