--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.10",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
