--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "expo start ",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -17,7 +17,7 @@
     "@expo/ngrok": "^4.1.0",
     "@material-ui/core": "^4.12.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/bottom-tabs": "6",
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
@@ -26,20 +26,21 @@
     "antd-mobile": "^5.34.0",
     "antd-mobile-icons": "^0.3.0",
     "dotenv": "^16.4.1",
-    "expo": "~50.0.5",
-    "expo-camera": "~14.0.5",
+    "expo": "~50.0.20",
+    "expo-camera": "~14.1.3",
     "expo-datepicker": "^1.0.23",
-    "expo-font": "~11.10.2",
-    "expo-linear-gradient": "^12.7.1",
-    "expo-location": "~16.5.2",
+    "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.10",
+    "expo-updates": "~0.24.13",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-autocomplete-dropdown": "^3.1.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -48,7 +49,7 @@
     "react-native-paper-dates": "^0.21.9",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.0.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0"
